<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".page2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/congratulations"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fontFamily="@font/third"
        android:text="@string/your_name"
        android:textColor="@color/red"
        android:layout_marginTop="20sp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/your_lucky_number_is"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberOutput"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/lucky_no"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:fontFamily="@font/first"
        android:textColorHint="@color/black"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="30dp"/>

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="150dp"
        android:text="@string/share_your"
        android:textStyle="bold"
        android:textSize="20sp"/>

</LinearLayout>